@@ -3,6 +3,7 @@ sunuo (0.4.3) unstable; urgency=low
   * make automatic world save interval configurable, patch by Maik Greubel
   * documentation updates
     - server-list configuration
+  * lock TimerChangeEntry.m_InstancePool
 
  --
 
